--- a/RegresjaSprawozdanie/sprawozdanie.tex
+++ b/RegresjaSprawozdanie/sprawozdanie.tex
@@ -194,6 +194,7 @@ ARR
 		
 \section{Uruchomienie}
 	\subsection{Pliki}
+	\textbf{Ponieważ nie jest możliwe dodanie plików zadania załączam link z którego można je pobrać \url{https://github.com/artur1993/SlavePrice}}\\
 		Do raportu zostały dostarczone następujące pliki:
 		\begin{itemize}
 			\item LoadDataSet - zawiera funkcje do pobrania danych oczyszczenia z błędów, dodaje i modyfikuje cechy na potrzeby uczenia modelu
